2009-11-06  Jeff Schiller  <codedread@gmail.com>

        Reviewed by Darin Adler.

        SVG Status page update
        https://bugs.webkit.org/show_bug.cgi?id=31179

        * projects/svg/status.xml:

2009-11-03  Darin Adler  <darin@apple.com>

        Set the MIME type for all PNG files in this directory.

        * blog-files/3d-transforms/mighty-cubes.png: Added property svn:mime-type.
        * blog-files/3d-transforms/poster-circle.png: Added property svn:mime-type.
        * blog-files/InspectorDatabaseBrowser.png: Modified property svn:mime-type.
        * blog-files/acid3-100.png: Modified property svn:mime-type.
        * blog-files/acid3-full-rendering-pass.png: Modified property svn:mime-type.
        * blog-files/acid3-rendering-reference.png: Modified property svn:mime-type.
        * blog-files/acid3-screenshot.png: Modified property svn:mime-type.
        * blog-files/acid3-timing-screenshot.png: Modified property svn:mime-type.
        * blog-files/acid3-timing.png: Modified property svn:mime-type.
        * blog-files/bounce.png: Added property svn:mime-type.
        * blog-files/gebcnwebkitonly.png: Modified property svn:mime-type.
        * blog-files/inspector-closure-scope.png: Added property svn:mime-type.
        * blog-files/inspector-console-autocomplete.png: Added property svn:mime-type.
        * blog-files/inspector-databases-panel-query-view.png: Added property svn:mime-type.
        * blog-files/inspector-databases-panel.png: Added property svn:mime-type.
        * blog-files/inspector-disabling-properties.png: Added property svn:mime-type.
        * blog-files/inspector-elements-panel.png: Added property svn:mime-type.
        * blog-files/inspector-event-scope.png: Added property svn:mime-type.
        * blog-files/inspector-profiles-panel.png: Added property svn:mime-type.
        * blog-files/inspector-resources-panel.png: Added property svn:mime-type.